--- a/po/cs.po
+++ b/po/cs.po
@@ -407,14 +407,15 @@ msgstr ""
 msgid "%k:%M %e/%m"
 msgstr ""
 
-#, fuzzy, python-format
+#, python-format
 msgid ""
 "%s\n"
 "Do you still want to flash image\n"
 "%s?"
 msgstr ""
-"Chcete nahrát image\n"
-"%s"
+"%s\n"
+"Chcete stále nahrát image\n"
+"%s?"
 
 #, python-format
 msgid ""
@@ -739,7 +740,7 @@ msgstr ""
 
 #
 msgid "A graphical EPG for all services of a specific bouquet"
-msgstr "Grafická EPG pro všechny programy ve specifickém přehledu"
+msgstr "Grafická EPG pro všechny programy v přehledu"
 
 #
 #, python-format
@@ -1111,7 +1112,7 @@ msgid "Alternative"
 msgstr "alternativní"
 
 msgid "Alternative URL for images listed on FlashImage"
-msgstr ""
+msgstr "Alternativní URL obrazů pro FlashImage"
 
 #
 msgid "Alternative numbering mode"
@@ -2004,7 +2005,7 @@ msgid "Clear playlist"
 msgstr "Vymazat playlist"
 
 msgid "Client is streaming from this box!"
-msgstr ""
+msgstr "Klient streamuje z tohoto přijímače!"
 
 msgid "Clone TV screen to LCD"
 msgstr "Klonovat TV obrazovku na LCD"
@@ -2796,9 +2797,8 @@ msgid "Debug to file"
 msgstr "Debug do souboru"
 
 #
-#, fuzzy
 msgid "Deep Standby LED"
-msgstr "Hluboký spánek"
+msgstr "LED v hlubokém spánku"
 
 #
 msgid "Deep standby"
@@ -3084,16 +3084,14 @@ msgid "Display >16:9 content as"
 msgstr "Zobrazovat >16:9 obsah jako"
 
 msgid "Display EPG as MultiEPG"
-msgstr ""
+msgstr "Zobrazení EPG jako MultiEPG"
 
-#, fuzzy
 msgid "Display EPG info for current event"
-msgstr "Uložit timeshift pouze pro aktuální událost"
+msgstr "EPG informace aktuálního pořadu"
 
 #
-#, fuzzy
 msgid "Display EPG list for current channel"
-msgstr "Zobrazovat EPG pro aktuální kanál..."
+msgstr "Zobrazení EPG aktuálního kanálu"
 
 #
 msgid "Display and userinterface"
@@ -3617,7 +3615,7 @@ msgid "Enter URL"
 msgstr "Zadejte URL"
 
 msgid "Enter an URL where alternative images could be listed for FlashImage"
-msgstr ""
+msgstr "Zadejte URL, kde by mohly být alternativní obrazy pro FlashImage"
 
 msgid "Enter if you are in the east or west hemisphere."
 msgstr "Zadejte, zda jste na východní nebo západní polokouli."
@@ -4522,7 +4520,7 @@ msgid "Harddisk Setup"
 msgstr "Nastavení pevného disku"
 
 msgid "Harddisk is not in sleepmode it could be in use!"
-msgstr ""
+msgstr "Pevný disk není ve standby a může být používán!"
 
 msgid "Hardware: "
 msgstr "Hardware: "
@@ -9217,9 +9215,8 @@ msgid "Standby / restart"
 msgstr "Standby / restart"
 
 #
-#, fuzzy
 msgid "Standby LED"
-msgstr "Pohotovostní režim"
+msgstr "LED v pohotovostním režimu"
 
 msgid "Standby after current event"
 msgstr "Standby po této události"
@@ -9625,7 +9622,7 @@ msgstr ""
 "Pro případné korekce můžete kontaktovat autora\n"
 "na výše uvedené adrese.\n"
 "\n"
-"®9.1.2019"
+"®25.1.2019"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -10451,9 +10448,8 @@ msgstr "Turkmenistán"
 msgid "Turks and Caicos Islands"
 msgstr "Turks a Caicos"
 
-#, fuzzy
 msgid "Turn on the power LED during deep standby."
-msgstr "Zapne LED napájení při standby."
+msgstr "Zapne LED napájení při hlubokém spánku."
 
 msgid "Turn on the power LED during standby."
 msgstr "Zapne LED napájení při standby."
