update hu.po (release-7.0 branch)

--- a/po/hu.po
+++ b/po/hu.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-12-17 16:32+0100\n"
-"PO-Revision-Date: 2018-12-19 09:09+0100\n"
+"PO-Revision-Date: 2019-01-26 20:27+0100\n"
 "Last-Translator: mcfly82\n"
 "Language-Team: mcfly82 & wysless\n"
 "Language: hu_HU\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.2\n"
+"X-Generator: Poedit 2.2.1\n"
 
 msgid ""
 "\n"
@@ -2100,7 +2100,7 @@ msgid "Configure whether or not an icon should be shown when your motorized dish
 msgstr "Megadja, hogy megjelenjen-e egy ikon a képernyőn, miközben az antenna forgatómotorja dolgozik."
 
 msgid "Configure which access level to use for the configuration menu. Expert level gives access to all items."
-msgstr "Milyen szintű hozzáférése legyen a menürendszernek. A 'Haladó' szint minden menü elemet hozzáférhetővé tesz."
+msgstr "Milyen szintű hozzáférése legyen a menürendszerhez. A 'Szakértő' szint minden menü elemet hozzáférhetővé tesz."
 
 msgid "Configure which color format should be used on the SCART output."
 msgstr "Milyen típusú videó jel jelenjen meg a SCART kimeneten."
@@ -3289,10 +3289,10 @@ msgid "Expand"
 msgstr "Kibővít"
 
 msgid "Expert"
-msgstr "Haladó"
+msgstr "Szakértő"
 
 msgid "Expert settings"
-msgstr "Haladó beállítások"
+msgstr "Szakértő beállítások"
 
 msgid "Extend sleeptimer 15 minutes"
 msgstr "Elalvás időzítése 15 perccel későbbre"
@@ -8241,7 +8241,7 @@ msgid "TRANSLATOR_INFO"
 msgstr ""
 "A fordítást készítette:\n"
 "mcfly82 & wysless\n"
-"Utolsó fordítás időpontja: 2018.12.19.\n"
+"Utolsó fordítás időpontja: 2019.01.26.\n"
 "Eredeti fordítás: MediaVox-Team, Robertut\n"
 "A magyar fordítás az OpenPLi projekthez készült.\n"
 "További információ: http://openpli.org"
