--- a/po/hu.po
+++ b/po/hu.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-01-25 20:37+0100\n"
-"PO-Revision-Date: 2019-01-15 15:59+0100\n"
+"PO-Revision-Date: 2019-01-26 20:42+0100\n"
 "Last-Translator: mcfly82\n"
 "Language-Team: mcfly82 & wysless\n"
 "Language: hu_HU\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.2\n"
+"X-Generator: Poedit 2.2.1\n"
 
 msgid ""
 "\n"
@@ -374,12 +374,14 @@ msgstr "%d:%02d"
 msgid "%k:%M %e/%m"
 msgstr "%k:%M %m.%e"
 
-#, fuzzy, python-format
+#, python-format
 msgid ""
 "%s\n"
 "Do you still want to flash image\n"
 "%s?"
-msgstr "Biztos benne, hogy flashelni szeretné a %s image-t?"
+msgstr ""
+"%s\n"
+"Biztos benne, hogy flashelni szeretné a %s image-t?"
 
 #, python-format
 msgid ""
@@ -975,7 +977,7 @@ msgid "Alternative"
 msgstr "Alternatív"
 
 msgid "Alternative URL for images listed on FlashImage"
-msgstr ""
+msgstr "Alternatív URL az image listához"
 
 msgid "Alternative numbering mode"
 msgstr "Alternatív számozás"
@@ -1757,7 +1759,7 @@ msgid "Clear playlist"
 msgstr "Lejátszási lista törlése"
 
 msgid "Client is streaming from this box!"
-msgstr ""
+msgstr "Van streamelő kliens erről a boxról!"
 
 msgid "Clone TV screen to LCD"
 msgstr "TV kijelző klónozása LCD kijelzőre"
@@ -2136,7 +2138,7 @@ msgid "Configure whether or not an icon should be shown when your motorized dish
 msgstr "Megadja, hogy megjelenjen-e egy ikon a képernyőn, miközben az antenna forgatómotorja dolgozik."
 
 msgid "Configure which access level to use for the configuration menu. Expert level gives access to all items."
-msgstr "Milyen szintű hozzáférése legyen a menürendszernek. A 'Haladó' szint minden menü elemet hozzáférhetővé tesz."
+msgstr "Milyen szintű hozzáférése legyen a menürendszerhez. A 'Szakértő' szint minden menü elemet hozzáférhetővé tesz."
 
 msgid "Configure which color format should be used on the SCART output."
 msgstr "Milyen típusú videó jel jelenjen meg a SCART kimeneten."
@@ -2456,9 +2458,8 @@ msgstr "Idő/Dátum megadása"
 msgid "Debug to file"
 msgstr "Hibakeresés fájlba"
 
-#, fuzzy
 msgid "Deep Standby LED"
-msgstr "Kikapcsolás"
+msgstr "Mély készenléti LED"
 
 msgid "Deep standby"
 msgstr "Kikapcsolás"
@@ -2698,15 +2699,13 @@ msgid "Display >16:9 content as"
 msgstr "16:9-nél szélesebb tartalom megjelenítése"
 
 msgid "Display EPG as MultiEPG"
-msgstr ""
+msgstr "Az EPG mutatása mint MultiEPG"
 
-#, fuzzy
 msgid "Display EPG info for current event"
-msgstr "Csak ezen időcsúsztatás felvételének megtartása"
+msgstr "Az aktuális műsor EPG-információ megjelenítése"
 
-#, fuzzy
 msgid "Display EPG list for current channel"
-msgstr "Az aktuális csatorna EPG-jének megjelenítése..."
+msgstr "Az aktuális csatorna EPG-jének megjelenítése"
 
 msgid "Display and userinterface"
 msgstr "Képernyő és felhasználói felület"
@@ -3152,7 +3151,7 @@ msgid "Enter URL"
 msgstr "Adja meg az URL címet"
 
 msgid "Enter an URL where alternative images could be listed for FlashImage"
-msgstr ""
+msgstr "Adjon meg egy URL-t, ahonnan alternatív image lista lekérése lehetséges"
 
 msgid "Enter if you are in the east or west hemisphere."
 msgstr "Adja meg, hogy a keleti vagy a nyugati féltekén tartózkodik."
@@ -3362,10 +3361,10 @@ msgid "Expand"
 msgstr "Kibővít"
 
 msgid "Expert"
-msgstr "Haladó"
+msgstr "Szakértő"
 
 msgid "Expert settings"
-msgstr "Haladó beállítások"
+msgstr "Szakértő beállítások"
 
 msgid "Extend sleeptimer 15 minutes"
 msgstr "Elalvás időzítése 15 perccel későbbre"
@@ -3958,7 +3957,7 @@ msgid "Harddisk Setup"
 msgstr "Háttértár beállítások"
 
 msgid "Harddisk is not in sleepmode it could be in use!"
-msgstr ""
+msgstr "A merevlemez nincs készenlétben! Lehetséges, hogy éppen használatban van."
 
 msgid "Hardware: "
 msgstr "Hardver: "
@@ -7993,7 +7992,6 @@ msgstr "Készenlét"
 msgid "Standby / restart"
 msgstr "Készenlét / újraindítás"
 
-#, fuzzy
 msgid "Standby LED"
 msgstr "Készenléti LED"
 
@@ -8343,7 +8341,7 @@ msgid "TRANSLATOR_INFO"
 msgstr ""
 "A fordítást készítette:\n"
 "mcfly82 & wysless\n"
-"Utolsó fordítás időpontja: 2019.01.15.\n"
+"Utolsó fordítás időpontja: 2019.01.26.\n"
 "Eredeti fordítás: MediaVox-Team, Robertut\n"
 "A magyar fordítás az OpenPLi projekthez készült.\n"
 "További információ: http://openpli.org"
@@ -9085,7 +9083,6 @@ msgstr "Türkmenisztán"
 msgid "Turks and Caicos Islands"
 msgstr "Turks- és Caicos-szigetek"
 
-#, fuzzy
 msgid "Turn on the power LED during deep standby."
 msgstr "A LED jelző fény bekapcsolása készenléti módban."
 
