--- a/po/cs.po
+++ b/po/cs.po
@@ -4132,12 +4132,12 @@ msgstr "Nahrát image"
 msgid "Flashing Image"
 msgstr "Nahrávání image"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr "Image bylo úspěšně nahráno"
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 "Nahrání image nebylo úspěšné\n"
