fix translations after spelling correction

--- a/po/ar.po
+++ b/po/ar.po
@@ -3820,12 +3820,12 @@ msgstr "تنصيب صورة"
 msgid "Flashing Image"
 msgstr "جاري تثبيت الصورة"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr "نجح تثبيت الصورة"
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 
