--- a/po/bg.po
+++ b/po/bg.po
@@ -3637,12 +3637,12 @@ msgstr "Флашване на имидж"
 msgid "Flashing Image"
 msgstr "Флашване на имидж"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr "Флашването на имиджа завърши успешно"
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 "Флашването на имиджа не беше успешно\n"
