--- a/po/de.po
+++ b/po/de.po
@@ -3613,12 +3613,12 @@ msgstr "Flashe Image"
 msgid "Flashing Image"
 msgstr "Flashe Image"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr "Image Flash erfolgreich"
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 "Image Flash war nicht erfolgreich\n"
