--- a/po/el.po
+++ b/po/el.po
@@ -3613,12 +3613,12 @@ msgstr "Φλασάρισμα του image"
 msgid "Flashing Image"
 msgstr "Φλασάρισμα του Image"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr "Επιτυχές φλασάρισμα του image"
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 "Το φλασάρισμα του image απέτυχε\n"
