--- a/po/es.po
+++ b/po/es.po
@@ -4029,12 +4029,12 @@ msgstr "Imagen Flash"
 msgid "Flashing Image"
 msgstr "Flasheo de imagen con éxito"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr "Imagen parpadeante exitosa"
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 "La imagen intermitente no fue exitosa\n"
