--- a/po/et.po
+++ b/po/et.po
@@ -3624,12 +3624,12 @@ msgstr "Paigalda süsteemitõmmis"
 msgid "Flashing Image"
 msgstr "Paigalda süsteemitõmmis"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr "Õnnestunud tarkvara paigaldus"
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 "Tarkvara paigaldus ei õnnestunud\n"
