--- a/po/fa.po
+++ b/po/fa.po
@@ -3689,12 +3689,12 @@ msgstr "فلش ایمیج"
 msgid "Flashing Image"
 msgstr "فلش"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr ""
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 
