--- a/po/fi.po
+++ b/po/fi.po
@@ -4033,12 +4033,12 @@ msgstr "Päivitä"
 msgid "Flashing Image"
 msgstr "Päivitä"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr ""
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 
