--- a/po/fr.po
+++ b/po/fr.po
@@ -3615,12 +3615,12 @@ msgstr "Flasher image"
 msgid "Flashing Image"
 msgstr "Flashage de l’image"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr "Image flashée avec succès"
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 "Le flashage de l'image %s \n"
