--- a/po/hr.po
+++ b/po/hr.po
@@ -4032,12 +4032,12 @@ msgstr ""
 msgid "Flashing Image"
 msgstr "Skidam"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr ""
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 
