--- a/po/hu.po
+++ b/po/hu.po
@@ -3608,12 +3608,12 @@ msgstr "Flash image"
 msgid "Flashing Image"
 msgstr "Image flashelése"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr "Flashelés sikeres"
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 "Flashelés sikertelen\n"
