--- a/po/is.po
+++ b/po/is.po
@@ -3952,12 +3952,12 @@ msgstr "Forritun"
 msgid "Flashing Image"
 msgstr "Forritun"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr ""
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 
