--- a/po/it.po
+++ b/po/it.po
@@ -3633,12 +3633,12 @@ msgstr "Installazione immagine"
 msgid "Flashing Image"
 msgstr "Installazione immagine"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr "Flash dell'immagine riuscito"
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 "Flash dell'immagine non riuscito\n"
