--- a/po/lt.po
+++ b/po/lt.po
@@ -3628,12 +3628,12 @@ msgstr "Įdiegtas atvaizdas"
 msgid "Flashing Image"
 msgstr "Įdiegtas atvaizdas"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr "Atvaizdas įdiegtas sėkmingai"
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 "Avaizdo įdiegti nepavyko\n"
