--- a/po/lv.po
+++ b/po/lv.po
@@ -3632,12 +3632,12 @@ msgstr "Uzstādīt imidžu"
 msgid "Flashing Image"
 msgstr "Uzstāda imidžu"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr "Imidžs ir veiksmīgi uzstādīts"
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 "Imidžs nav veiksmīgi uzstādīts\n"
