--- a/po/nb.po
+++ b/po/nb.po
@@ -3999,12 +3999,12 @@ msgstr "Installer operativsystem"
 msgid "Flashing Image"
 msgstr "Installerer operativsystem"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr "Installering av operativsystem gikk fint"
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 "Installering av operativsystem feilet\n"
