--- a/po/nl.po
+++ b/po/nl.po
@@ -3792,12 +3792,12 @@ msgstr "Image flashen"
 msgid "Flashing Image"
 msgstr "De image wordt geflasht"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr "Het flashen van de image is gelukt."
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 "Het flashen van de image is mislukt\n"
