--- a/po/pl.po
+++ b/po/pl.po
@@ -3637,12 +3637,12 @@ msgstr "Zainstaluj image"
 msgid "Flashing Image"
 msgstr "Instalowanie image"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr "Image zainstalowane pomyślnie"
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 "Wgrywanie image nie powiodło się\n"
