--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -3635,12 +3635,12 @@ msgstr "A gravação falhou"
 msgid "Flashing Image"
 msgstr "A gravação falhou"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr ""
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 
