--- a/po/ru.po
+++ b/po/ru.po
@@ -3629,12 +3629,12 @@ msgstr "Прошивка имиджа"
 msgid "Flashing Image"
 msgstr "Прошивка имиджа"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr "Прошивка имиджа завершена успешна"
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 "Прошивка имиджа не закончилась успехом\n"
