--- a/po/sk.po
+++ b/po/sk.po
@@ -3630,12 +3630,12 @@ msgstr "Nahranie softvéru"
 msgid "Flashing Image"
 msgstr "Nahrať image"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr "Nahratie image bolo úspešné"
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 "Nahratie image nebolo úspešné\n"
