--- a/po/sl.po
+++ b/po/sl.po
@@ -4160,12 +4160,12 @@ msgstr "Nadgradi"
 msgid "Flashing Image"
 msgstr "Nadgradi"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr ""
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 
