--- a/po/tr.po
+++ b/po/tr.po
@@ -3649,12 +3649,12 @@ msgstr "Flaş"
 msgid "Flashing Image"
 msgstr "Flaş"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr ""
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 
