--- a/po/uk.po
+++ b/po/uk.po
@@ -3678,12 +3678,12 @@ msgstr ""
 msgid "Flashing Image"
 msgstr "Завантаження"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr ""
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 
