--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -3600,12 +3600,12 @@ msgid "Flashing Image"
 msgstr "安装失败"
 
 #, fuzzy
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr "成功删除"
 
 #, fuzzy, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr "安装不成功!\n"
 
