--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -3599,12 +3599,12 @@ msgid "Flashing Image"
 msgstr "安裝失敗"
 
 #, fuzzy
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr "移除完成"
 
 #, fuzzy, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr "安裝不成功!\n"
 
