--- a/po/ca.po
+++ b/po/ca.po
@@ -4019,12 +4019,12 @@ msgstr ""
 msgid "Flashing Image"
 msgstr "Descarregant"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr ""
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 
