--- a/po/sr.po
+++ b/po/sr.po
@@ -4170,12 +4170,12 @@ msgstr "Fleš"
 msgid "Flashing Image"
 msgstr "Fleš"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr ""
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 
