--- a/po/th.po
+++ b/po/th.po
@@ -3704,12 +3704,12 @@ msgstr "แฟรช"
 msgid "Flashing Image"
 msgstr "แฟรช"
 
-msgid "Flashing image succesfull"
+msgid "Flashing image successful"
 msgstr ""
 
 #, python-format
 msgid ""
-"Flashing image was not succesfull\n"
+"Flashing image was not successful\n"
 "%s"
 msgstr ""
 
