Update all language po files with latest strings using https://github.com/PLi-metas/enigma2-language/blob/master/enigma2-language.sh

--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-25 20:37+0100\n"
+"POT-Creation-Date: 2019-02-05 10:55+0330\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Budiarno\n"
 "Language-Team: \n"
@@ -224,9 +224,6 @@ msgstr "%A %e %B %Y"
 
 msgid "%H:%M"
 msgstr "%H:%M"
-
-msgid "%Y-%m-%d %H:%M"
-msgstr "%Y-%m-%d %H:%M"
 
 #. TRANSLATORS: full date representations short dayname daynum monthname long year in strftime() format! See 'man strftime'
 #, fuzzy
@@ -606,6 +603,10 @@ msgstr ": 0000 - bawaan (dimatikan)"
 
 msgid "<Current movielist location>"
 msgstr "<Lokasi daftar film saat ini>"
+
+#, fuzzy
+msgid "<Default Skin>"
+msgstr "Pengaturan bawaan"
 
 msgid "<Default movie location>"
 msgstr "<Lokasi film bawaan>"
@@ -6093,6 +6094,9 @@ msgstr "Atur Posisioner"
 msgid "Positioner setup log"
 msgstr ""
 
+msgid "Power LED"
+msgstr ""
+
 msgid "Power management. Consult your receiver's manual for more information."
 msgstr ""
 
@@ -9213,6 +9217,9 @@ msgid "Turn on the power LED during deep standby."
 msgstr ""
 
 msgid "Turn on the power LED during standby."
+msgstr ""
+
+msgid "Turn on the power LED."
 msgstr ""
 
 msgid "Turning step size"
