Update all language po files with latest strings using https://github.com/OpenVisionE2/enigma2-language/blob/master/enigma2-language.sh

--- a/po/ru.po
+++ b/po/ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-25 20:37+0100\n"
+"POT-Creation-Date: 2019-02-05 11:25+0330\n"
 "PO-Revision-Date: 2018-05-02 18:32+0300\n"
 "Last-Translator: Dimitrij <Dima-73@inbox.lv>\n"
 "Language-Team: openPLi Dimitrij\n"
@@ -227,9 +227,6 @@ msgstr "%A %e %B %Y"
 
 msgid "%H:%M"
 msgstr "%H:%M"
-
-msgid "%Y-%m-%d %H:%M"
-msgstr "%Y-%m-%d %H:%M"
 
 #. TRANSLATORS: full date representations short dayname daynum monthname long year in strftime() format! See 'man strftime'
 msgid "%a %e %B %Y"
@@ -622,6 +619,10 @@ msgstr ": 0000 - по умолчанию (отключено)"
 
 msgid "<Current movielist location>"
 msgstr "<Текущее место списка видео>"
+
+#, fuzzy
+msgid "<Default Skin>"
+msgstr "Дефолтные настройки"
 
 msgid "<Default movie location>"
 msgstr "<Место видео по дефолту>"
@@ -6019,6 +6020,9 @@ msgstr "Настройка позиционера"
 msgid "Positioner setup log"
 msgstr "Лог настроек позиционера"
 
+msgid "Power LED"
+msgstr ""
+
 msgid "Power management. Consult your receiver's manual for more information."
 msgstr "Управление питанием. Для получения дополнительной информации обратитесь к инструкции."
 
@@ -9110,6 +9114,10 @@ msgid "Turn on the power LED during deep standby."
 msgstr "Включить питание на кнопке LED, на передней панели в режиме ожидания / режиме глубокого ожидания."
 
 msgid "Turn on the power LED during standby."
+msgstr "Включить питание на кнопке LED, на передней панели в режиме ожидания / режиме глубокого ожидания."
+
+#, fuzzy
+msgid "Turn on the power LED."
 msgstr "Включить питание на кнопке LED, на передней панели в режиме ожидания / режиме глубокого ожидания."
 
 msgid "Turning step size"
