po file updated from develop at 2019-02-15 19:50

--- a/po/fi.po
+++ b/po/fi.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-05 11:25+0330\n"
+"POT-Creation-Date: 2019-02-15 19:45+0100\n"
 "PO-Revision-Date: 2019-02-13 20:52+0200\n"
 "Last-Translator: jamu\n"
 "Language-Team: AndyBlac/timoj/Kojo/Samzam\n"
@@ -3467,9 +3467,9 @@ msgstr ""
 msgid "English"
 msgstr "Englanti"
 
-#, python-format
-msgid "Enigman (uudelleen)käynnistykset: %d\n"
-msgstr ""
+#, fuzzy, python-format
+msgid "Enigma (re)starts: %d\n"
+msgstr "Enigman versio: "
 
 msgid "Enigma version: "
 msgstr "Enigman versio: "
@@ -7135,10 +7135,6 @@ msgstr "Virkistystaajuus"
 #
 msgid "Refresh rate selection."
 msgstr "Virkistystaajuuden valinta."
-
-#
-msgid "Refreshing image list - Please wait..."
-msgstr "Haetaan ohjelmistokuva listausta - Odota..."
 
 #
 msgid "Refusing to move to the same directory"
