--- a/po/sk.po
+++ b/po/sk.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-05 11:25+0330\n"
+"POT-Creation-Date: 2019-02-15 19:45+0100\n"
 "PO-Revision-Date: 2019-02-06 13:41+0100\n"
 "Last-Translator: Andrej Tobola <andrej.tobola@gmail.com>\n"
 "Language-Team: \n"
@@ -6382,9 +6382,6 @@ msgstr "Obnovovacia frekvencia"
 msgid "Refresh rate selection."
 msgstr "Voľba obnovovacej frekvencie."
 
-msgid "Refreshing image list - Please wait..."
-msgstr "Obnovujem zoznam imagov - Prosím čakajte..."
-
 msgid "Refusing to move to the same directory"
 msgstr "Nie je možné presunúť do rovnakej zložky"
 
@@ -7398,6 +7395,10 @@ msgstr "Nastaviť stanicu po spustení"
 
 msgid "Set the User ID of the OpenWebif from your fallback tuner"
 msgstr "Nastaviť User ID rozhrania OpenWeb záložného tuneru"
+
+#, fuzzy
+msgid "Set the password of the OpenWebif from your fallback tuner"
+msgstr "Nastaviť port rozhrania OpenWeb záložného tuneru"
 
 msgid "Set the port of the OpenWebif from your fallback tuner"
 msgstr "Nastaviť port rozhrania OpenWeb záložného tuneru"
