Update hungarian translation

--- a/po/hu.po
+++ b/po/hu.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-02-15 19:45+0100\n"
-"PO-Revision-Date: 2019-01-26 20:42+0100\n"
+"PO-Revision-Date: 2019-02-19 12:41+0100\n"
 "Last-Translator: mcfly82\n"
 "Language-Team: mcfly82 & wysless\n"
 "Language: hu_HU\n"
@@ -609,9 +609,8 @@ msgstr ": 0000 - alapértelmezett (kikapcsolva)"
 msgid "<Current movielist location>"
 msgstr "<Filmlista aktuális tárhelye>"
 
-#, fuzzy
 msgid "<Default Skin>"
-msgstr "Alapértelmezett beállítások"
+msgstr "<Alapértelmezett Kinézet>"
 
 msgid "<Default movie location>"
 msgstr "<Felvételek tárhelye>"
@@ -6001,7 +6000,7 @@ msgid "Positioner setup log"
 msgstr "Forgatómotor beállítás naplózás"
 
 msgid "Power LED"
-msgstr ""
+msgstr "LED jelző fény"
 
 msgid "Power management. Consult your receiver's manual for more information."
 msgstr "Energiagazdálkodás. További információkért olvassa el készüléke használati útmutatóját."
@@ -8342,7 +8341,7 @@ msgid "TRANSLATOR_INFO"
 msgstr ""
 "A fordítást készítette:\n"
 "mcfly82 & wysless\n"
-"Utolsó fordítás időpontja: 2019.01.26.\n"
+"Utolsó fordítás időpontja: 2019.02.19.\n"
 "Eredeti fordítás: MediaVox-Team, Robertut\n"
 "A magyar fordítás az OpenPLi projekthez készült.\n"
 "További információ: http://openpli.org"
@@ -9090,7 +9089,6 @@ msgstr "A LED jelző fény bekapcsolása készenléti módban."
 msgid "Turn on the power LED during standby."
 msgstr "A LED jelző fény bekapcsolása készenléti módban."
 
-#, fuzzy
 msgid "Turn on the power LED."
 msgstr "A LED jelző fény bekapcsolása készenléti módban."
 
